--- a/index.html
+++ b/index.html
@@ -31,12 +31,15 @@
     <section class="hero">
       <div class="hero-container">
         <div class="column-left">
-          <h1>Understand, manage and fight IBS together</h1>
+          <h1>Understand, Manage, and Fight IBS together</h1>
           <p>
-            A welcoming community for all- IBSaid for IBS patients as well as 
-            caretakers that wish to understand more about IBS and ways to handle symptoms.
+            IBSaid is a welcoming community for everyone! 
+            It is for all IBS patients as well as caretakers 
+            who wish to understand more about IBS and ways to handle symptoms.
           </p>
-          <button>Get Started</button>
+            Please use our unique AI-powered chatbot (lower right corner) for any queries!
+          </p>
+          <button>Sign Up</button>
         </div>
         <div class="column-right">
           <img
